[package]
name = "factorio_sc_graphics"
version = "0.1.0"
authors = ["henryj"]
edition = "2018"
build = "build.rs"

[[bin]]
name = "scrubber"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
byteorder = "1.2"
image = "0.23"

[build-dependencies]
cmake = "0.1"
pkg-config = "0.3"
bindgen = "0.58"
